[package]
name = "gguf-surgeon"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"

[[bin]]
name = "gguf"
path = "src/main.rs"

[lib]
name = "gguf_surgeon"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
